deploy: 603ca12b095f95d430d2a86689b566ba60799059

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ GHC 専用の言語拡張がふんだんに使われている
 </ul>
 <footer><a href="https://coord-e.github.io/slide-coins20lt-prove-using-ghc">https://coord-e.github.io/slide-coins20lt-prove-using-ghc</a></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-paginate="true" data-background-color="#F1F1F1" data-footer="https://coord-e.github.io/slide-coins20lt-prove-using-ghc" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-paginate="true" data-background-color="#F1F1F1" data-style="section {
   font-family: &quot;Noto Sans CJK JP&quot;, &quot;Noto Sans JP&quot;, sans-serif;
 }
 section &gt; footer, section &gt; footer a {
@@ -97,7 +97,11 @@ section &gt; footer, section &gt; footer a {
 <li>証明はひとつではない</li>
 </ul>
 </li>
-<li><code>T</code> を命題、<code>e1, e2</code> を <code>T</code> が真であることの証明ととらえることができる</li>
+<li><code>T</code> を命題、<code>e1, e2</code> を <code>T</code> が真であることの証明ととらえることができる
+<ul>
+<li><strong>論理の推論規則が型システムの型付け規則と一対一対応しているので、型がつく = 推論過程がある = 証明できている</strong></li>
+</ul>
+</li>
 </ul>
 </li>
 <li>ここでいう命題は直観主義論理という体系
@@ -106,7 +110,6 @@ section &gt; footer, section &gt; footer a {
 </ul>
 </li>
 </ul>
-<footer><a href="https://coord-e.github.io/slide-coins20lt-prove-using-ghc">https://coord-e.github.io/slide-coins20lt-prove-using-ghc</a></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-paginate="true" data-background-color="#F1F1F1" data-footer="https://coord-e.github.io/slide-coins20lt-prove-using-ghc" data-style="section {
   font-family: &quot;Noto Sans CJK JP&quot;, &quot;Noto Sans JP&quot;, sans-serif;
